################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( CPlusPlusBaseProj )

add_executable(peru peru.cpp)
